toolchain/engine/src/plan/snapshots/knot_engine__plan__parse__tests__parse_multiple_files_from_entrypoint-2.snap
---
source: toolchain/engine/src/plan/parse.rs
expression: foo.raw
---
Program(
    Program(
        Module(
            Node(
                Module {
                    imports: [
                        Import(
                            Node(
                                Import {
                                    source: Local,
                                    path: [
                                        "bar",
                                    ],
                                    alias: None,
                                },
                                Range(
                                    Point(
                                        1,
                                        1,
                                    ),
                                    Point(
                                        1,
                                        9,
                                    ),
                                ),
                                (),
                            ),
                        ),
                    ],
                    declarations: [],
                },
                Range(
                    Point(
                        1,
                        1,
                    ),
                    Point(
                        1,
                        10,
                    ),
                ),
                (),
            ),
        ),
    ),
)
