toolchain/engine/src/plan/snapshots/knot_engine__plan__parse__tests__parse_multiple_files_from_entrypoint-3.snap
---
source: toolchain/engine/src/plan/parse.rs
expression: bar.raw
---
Program(
    Program(
        Module(
            Node(
                Module {
                    imports: [],
                    declarations: [
                        Declaration(
                            Node(
                                Constant {
                                    storage: Storage {
                                        visibility: Public,
                                        binding: Binding(
                                            Node(
                                                Binding(
                                                    "BAR",
                                                ),
                                                Range(
                                                    Point(
                                                        1,
                                                        7,
                                                    ),
                                                    Point(
                                                        1,
                                                        9,
                                                    ),
                                                ),
                                                (),
                                            ),
                                        ),
                                    },
                                    value_type: None,
                                    value: Expression(
                                        Node(
                                            Primitive(
                                                Integer(
                                                    456,
                                                ),
                                            ),
                                            Range(
                                                Point(
                                                    1,
                                                    13,
                                                ),
                                                Point(
                                                    1,
                                                    15,
                                                ),
                                            ),
                                            (),
                                        ),
                                    ),
                                },
                                Range(
                                    Point(
                                        1,
                                        1,
                                    ),
                                    Point(
                                        1,
                                        15,
                                    ),
                                ),
                                (),
                            ),
                        ),
                    ],
                },
                Range(
                    Point(
                        1,
                        1,
                    ),
                    Point(
                        1,
                        16,
                    ),
                ),
                (),
            ),
        ),
    ),
)
