toolchain/engine/src/plan/snapshots/knot_engine__plan__parse__tests__parse_multiple_files_from_entrypoint.snap
---
source: toolchain/engine/src/plan/parse.rs
expression: main.raw
---
Program(
    Program(
        Module(
            Node(
                Module {
                    imports: [
                        Import(
                            Node(
                                Import {
                                    source: Root,
                                    path: [
                                        "foo",
                                        "foo",
                                    ],
                                    alias: None,
                                },
                                Range(
                                    Point(
                                        1,
                                        1,
                                    ),
                                    Point(
                                        1,
                                        13,
                                    ),
                                ),
                                (),
                            ),
                        ),
                    ],
                    declarations: [],
                },
                Range(
                    Point(
                        1,
                        1,
                    ),
                    Point(
                        1,
                        14,
                    ),
                ),
                (),
            ),
        ),
    ),
)
