toolchain/engine/src/plan/snapshots/knot_engine__plan__parse__tests__parse_one_empty_file.snap
---
source: toolchain/engine/src/plan/parse.rs
expression: module.raw
---
Program(
    Program(
        Module(
            Node(
                Module {
                    imports: [],
                    declarations: [],
                },
                Range(
                    Point(
                        1,
                        1,
                    ),
                    Point(
                        1,
                        1,
                    ),
                ),
                (),
            ),
        ),
    ),
)
